--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,41 @@
 body {
     padding-top: 50px;
 }
+
+.em-text {
+    color: #1caa98 !important;
+}
+
+section {
+    padding: 40px 0;
+}
+
+.jumbotron {
+    background: url(../img/site-showcase-bg-2.jpg) no-repeat top center;
+    color: white;
+    height: 500px;
+    overflow: hidden;
+}
+
+.jumbotron h1 {
+    margin-top: 60px;
+}
+
+.jumbotron p {
+    margin-bottom: 40px;
+}
+
+.jumbotron img.app-btn {
+    width: 40%;
+    margin-right: 30px;
+}
+
+.jumbotron img.showcase-img {
+    width: 75%;
+}
+
+img.demo {
+    width: 100%;
+    padding: 3px;
+    border: 1px solid #ccc;
+}
