--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,36 @@ img.demo {
     padding: 3px;
     border: 1px solid #ccc;
 }
+
+#feature {
+    background: #1caa98;
+    color: white;
+    padding: 40px;
+    overflow: auto;
+}
+
+#feature ul li {
+    font-size: 22px;
+    list-style: none;
+    line-height: 2em;
+}
+
+footer {
+    background-color: #333;
+    color: white;
+    padding: 30px 0 20px 0;
+}
+
+footer li {
+    float: left;
+    padding: 0 10px 0 10px;
+    list-style: none;
+}
+
+footer a {
+    color: white;
+}
+
+footer p {
+    float: right;
+}
