--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,18 @@ img.demo {
     line-height: 2em;
 }
 
+#title-bar {
+    padding: 0;
+    margin: 0;
+    height: 80px;
+    background-color: #1caa98;
+    color: white;
+}
+
+#title-bar h1 {
+    margin-bottom: 20px;
+}
+
 footer {
     background-color: #333;
     color: white;
